[package]
name = "gmux"
version = "0.1.0"
edition = "2021"
authors = ["Sam Lader"]
description = "CLI tool to manage & automate repetitive Git workflows across multiple Github repositories."

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
dirs = "5.0"
futures = "0.3"
octocrab = "0.32"
open = "5.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
urlencoding = "2.1"
reqwest = { version = "0.11", features = ["json"] }
indicatif = "0.17"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "gmux"
path = "src/main.rs"
